--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<h1>Hello world</h1>
+<app-header></app-header>
+<hr>
+<router-outlet></router-outlet>
+<hr>
 <app-component-service></app-component-service> 
